--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@octokit/auth-token": "^6.0.0",
+    "@octokit/rest": "^22.0.1",
     "@prisma/client": "^7.1.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-prettier": "^5.5.4",
     "next": "16.0.8",
-    "next-auth": "^4.24.13",
+    "next-auth": "^5.0.0-beta.30",
     "prisma": "^7.1.0",
     "react": "19.2.1",
     "react-dom": "19.2.1"
