--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@octokit/rest": "^22.0.1",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@tanstack/react-query": "^5.90.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-import-resolver-typescript": "^4.4.4",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
     "@types/node": "^20.19.26",
     "@types/react": "^19",
     "@types/react-dom": "^19",
