--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "npx eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md,css}\"",
-    "test": "jest --runInBand",
-    "test:unit": "jest --testPathPattern=__tests__",
+    "test": "npm run test:unit && npm run test:integration && npm run test:ui",
+    "test:unit": "jest --testPathPattern=unit.test",
     "test:integration": "jest --testPathPattern=integration --runInBand",
+    "test:ui": "jest --testPathPattern=ui.test --testEnvironment=jsdom",
     "test:watch": "jest --watch",
     "prepare": "husky install",
     "studio": "prisma studio"
@@ -46,6 +47,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.26",
     "@types/react": "^19",
