--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:integration": "jest --testPathPattern=integration --runInBand",
     "test:ui": "jest --testPathPattern=ui.test --testEnvironment=jsdom",
     "test:watch": "jest --watch",
+    "postinstall": "prisma generate",
     "prepare": "husky install",
     "studio": "prisma studio"
   },
